--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,7 +8,7 @@ blocks:
   - name: Test
     task:
       jobs:
-        - name: pytest
+        - name: unittest
           matrix:
             - env_vars: PYTHON_VERSION
               values:
@@ -24,3 +24,4 @@ blocks:
             - pip install flake8
             - 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics'
             - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+            - python -m unittest discover
