--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,6 +25,4 @@ blocks:
             - 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics'
             - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
             - python -m unittest discover
-      env_vars:
-        - name: PYTHON_VERSION
-          value: '2.7'
+      env_vars: []
