--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -26,5 +26,9 @@ blocks:
       jobs:
         - name: Coverage
           commands:
-            - pip install coverage
+            - checkout
+            - python -m pip install --upgrade coverage codecov
+            - pip install -r requirements.txt
             - coverage run -m unittest discover
+      secrets:
+        - name: easysparql
