--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -14,6 +14,7 @@ blocks:
             - checkout
             - python -m pip install --upgrade pip
             - pip install -r requirements.txt
+            - 'export PATH=$PATH:/home/semaphore/.local/bin'
           matrix:
             - env_var: PYTHON_VERSION
               values:
