--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,8 +28,10 @@ blocks:
         - name: Coverage
           commands:
             - checkout
-            - python -m pip install --upgrade coverage codecov
+            - python -m pip install --upgrade pip
             - pip install -r requirements.txt
+            - pip install coverage codecov
+            - 'export PATH=$PATH:/home/semaphore/.local/bin'
             - coverage run -m unittest discover
       secrets:
         - name: easysparql
