--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -33,5 +33,6 @@ blocks:
             - pip install coverage codecov
             - 'export PATH=$PATH:/home/semaphore/.local/bin'
             - coverage run -m unittest discover
+            - codecov
       secrets:
         - name: easysparql
