--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -30,9 +30,9 @@ blocks:
             - checkout
             - python -m pip install --upgrade pip
             - pip install -r requirements.txt
-            - pip install coverage codecov
+            - python -m pip install coverage
             - 'export PATH=$PATH:/home/semaphore/.local/bin'
             - coverage run -m unittest discover
-            - codecov -t "$CODECOV_TOKEN"
+            - 'bash <(curl -s https://codecov.io/bash)'
       secrets:
         - name: easysparql
