--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,6 +28,7 @@ blocks:
         - name: Coverage
           commands:
             - checkout
+            - sem-version python 3.6
             - python -m pip install --upgrade pip
             - pip install -r requirements.txt
             - python -m pip install coverage
